# grimoire

./: .env.example  .gitignore  README.md  codex_seed_data.json  docker-compose.dev.yml  docker-compose.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/grimoire/: __init__.py  config.py  database.py  main.py
backend/grimoire/api/: deps.py
backend/grimoire/exporters/: __init__.py  foundry.py  obsidian.py
backend/grimoire/middleware/: __init__.py  cache.py  rate_limit.py
backend/grimoire/migrations/: add_codex_fields.py  add_large_library_columns.py  add_search_columns.py  add_source_of_truth_column.py
backend/grimoire/models/: __init__.py  campaign.py  collection.py  contribution.py  deleted_duplicate.py  embedding.py  exclusion.py  folder.py  product.py  queue.py  run_note.py  scan_job.py  settings.py  tag.py
backend/grimoire/processors/: ai_identifier.py  image_extractor.py  statblock_extractor.py  structured_extractor.py  table_extractor.py  text_extractor.py  toc_extractor.py
backend/grimoire/schemas/: __init__.py  collection.py  common.py  folder.py  product.py  tag.py  ttrpg.py
backend/grimoire/services/: batch_scanner.py  codex.py  contribution_queue_processor.py  contribution_service.py  dtrpg_import.py  duplicate_service.py  embeddings.py  exclusion_service.py  fts_service.py  identifier.py  metadata_extractor.py  processor.py  queue_processor.py  scanner.py  (+3 more)
backend/migrations/: 001_add_author_genre.sql  002_add_run_tracking.sql  003_add_run_notes.sql  004_add_deleted_duplicates.sql
backend/scripts/: import_dtrpg.py
(+68 files in other folders)
